fix: prevent layout shift from scrollbar appearing

--- a/src/app.scss
+++ b/src/app.scss
@@ -49,3 +49,10 @@ body {
 		user-select: none;
 	}
 }
+
+@supports (scrollbar-gutter: stable) {
+	html {
+		overflow-y: auto;
+		scrollbar-gutter: stable;
+	}
+}
